# directed_graph_euler_check

./: .gitignore  CMakeLists.txt  README.md  REQUIREMENTS.md  compare_benchmark.py  euler_networkx.py  visualize_benchmark.py
include/: euler.hpp  utils.hpp
results/: benchmark_results.csv  comparison_results.csv
src/: benchmark.cpp  euler.cpp  euler_benchmark_wrapper.cpp  graph_generator.cpp  main.cpp  utils.cpp
